kubernetes/apps/homepage/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
