kubernetes/apps/homepage/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    tailscale.com/tags: tag:k8s-operator
    # gethomepage.dev/enabled: 'true'
    # gethomepage.dev/name: 'Homepage'
    # gethomepage.dev/description: 'This dashboard'
    # gethomepage.dev/group: 'Homelab Services'
    # gethomepage.dev/icon: 'homepage.png'
    # gethomepage.dev/href: 'https://homepage.${DOMAIN}'
    # gethomepage.dev/widget.type: 'homepage'
    # gethomepage.dev/widget.url: 'https://homepage.${DOMAIN}'
spec:
  ingressClassName: tailscale
  rules:
    - host: homepage
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
  tls:
    - hosts:
        - homepage
